test: creación de unit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,14 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react-jsx", // Para React 17+ usa "react-jsx" o "react" para versiones anteriores
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "module": "esnext",
+    "target": "es6",
+    "types": ["jest", "@testing-library/jest-dom", "node", "redux"]
+    // Otras opciones que ya tienes configuradas
+  }
 }
