--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/material-ui": "^0.21.17",
     "@types/react-redux": "^7.1.34",
     "@types/react-router": "^5.1.20",
     "axios": "^1.7.7",
+    "env-cmd": "^10.1.0",
     "jsdom": "^25.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
