--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_APP_API_URL=http://127.0.0.1:8000
+VITE_APP_API_URL=https://7w1pihf1ck.execute-api.us-east-1.amazonaws.com/dev
 VITE_APP_DEBUG=false
